# prs-rs

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.MD  README.md  build.rs  changelog.hbs  mkdocs.yml
.github/: artifact-groups.yml  cbindgen_c.toml  cbindgen_cpp.toml  changelog.hbs  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.yml
.github/workflows/: auto-changelog.yml  deploy-mkdocs.yml  rust.yml
benches/my_benchmark/: calc_decompressed_size.rs  compress.rs  createcompdict.rs  decompress.rs  estimate.rs  gen_pgo_data.rs  main.rs  util.rs
bindings/csharp/: Init.cs  NativeMethods.cs  NativeMethods.g.cs  csharp.csproj
doc/: README.md  mkdocs.yml  start_docs.py
doc/docs/: contributing.md  license.md  requirements.txt
docs/: index.md  mkdocs.yml
scripts/: build-macos-x64.ps1  test-linux-x64.ps1  test-linux-x86.ps1  test-wine-x64.ps1  test-wine-x86.ps1
src/: .gitignore  Cargo.toml  comp.rs  decomp.rs  exports.rs  lib.rs  prelude.rs  test_prelude.rs  util.rs
src/bindings/csharp/: NativeMethods.cs  NativeMethods.g.cs  csharp.csproj
src/cli/: Cargo.toml
src/cli/src/: main.rs  options.rs
src/cli/src/commands/: compress.rs  decompress.rs  test.rs
src/impls/comp/: comp_dict.rs  compress.rs  lz77_matcher.rs
src/impls/decomp/: decompress.rs
src/prs-rs/: Cargo.toml  build.rs
src/prs-rs/benches/my_benchmark/: calc_decompressed_size.rs  compress.rs  createcompdict.rs  decompress.rs  main.rs  util.rs
src/prs-rs/impls/comp/: comp_dict.rs
src/prs-rs/src/: comp.rs  lib.rs  prelude.rs  test_prelude.rs  util.rs
src/prs-rs/src/impls/comp/: compress.rs  lz77_matcher.rs
src/prs-rs/src/impls/decomp/: common.rs  estimate.rs
src/prs-rs/tests/: compress_tests.rs  decompress_tests.rs  estimate_tests.rs
src/prs-rs/tests/helpers/: lib.rs  samples.rs
src/prs-rs/tests/samples/compressed/: ModdedPath.bin.prs  WorstCase.bin.prs
src/prs-rs/tests/samples/mods/stage/adv_challenge/: ARROW.ANM  EMB_LEFT.ANM  EMB_RIGHT.ANM  EME.ANM
src/prs-rs/tests/samples/mods/stage/s11/: S11_DN_13.BSP  S11_DN_14.BSP  S11_DN_15.BSP  S11_DN_16.BSP  S11_K_05.BSP  S11_K_06.BSP  S11_K_08.BSP  S11_K_11.BSP  S11_K_12.BSP  S11_ONS_02.BSP  S11_ONS_03.BSP  S11_ONS_05.BSP  S11_ONS_06.BSP  S11_ONS_07.BSP  S11_ONS_09.BSP  S11_ONS_10.BSP  S11_ONS_11.BSP  S11_ONS_12.BSP  S11_ON_01.BSP  S11_ON_02.BSP  S11_ON_03.BSP  S11_ON_04.BSP  S11_ON_05.BSP  S11_ON_06.BSP  S11_ON_07.BSP  S11_ON_08.BSP  S11_ON_09.BSP  S11_ON_10.BSP  S11_ON_11.BSP  S11_ON_12.BSP  S11_PN_02.BSP  S11_PN_03.BSP  S11_PN_04.BSP  S11_PN_05.BSP  S11_PN_07.BSP  S11_PN_10.BSP
src/prs-rs/tests/samples/mods/stage/s11obj/: DOBJ0708_BARREL_WRECK.ANM  DOBJ0708_BARREL_WRECK.DFF  OBJ0708_CAPSULE_GLASS.DFF  OBJ0708_CAPSULE_OUT.DFF  OBJ0708_CAPSULE_OUT_WRECK.DFF  OBJ0708_CAPSULE_OUT_WRECK_GLASS.DFF  OBJ0708_CAPSULE_WRECK.DFF  OBJ0708_CAPSULE_WRECK_GLASS.DFF  S11_K_CLOUD.UVB  S11_K_CLOUD1.DFF  S11_K_CLOUD3.DFF  S11_K_CLOUD4.DFF  S11_K_CLOUD5.DFF  S11_K_CLOUD6.DFF  S11_K_SPIDERLIGHT1.DFF  S11_K_SPIDERLIGHT2.DFF  S11_K_SPIDERLIGHT3.DFF  S11_K_SPIDERLIGHT4.DFF  S11_K_SWITCH_BALL.DFF  S11_ONS_DAI_DOWN.DFF  S11_ONS_FIREB_OFF.DFF  S11_ON_DAI_UP.DFF  S11_ON_DOORR.DFF  S11_ON_FIREA_BASE.DFF  S11_ON_FIREA_BLUE.DFF  S11_ON_FIREA_OFF.DFF  S11_ON_FIREA_RED.DFF  S11_ON_FIREB_BLUE.DFF  S11_ON_FIREB_OFF.DFF  S11_ON_FIREB_RED.DFF  S11_ON_FLAGD_A.DFF  S11_ON_FLAGD_B.DFF  S11_ON_FLAGL_A.DFF  S11_ON_FLAGL_B.DFF  S11_ON_GRASSA1D.ANM  S11_ON_GRASSA1D.DFF  S11_ON_GRASSA2D.ANM  S11_ON_GRASSA2L.ANM  S11_ON_GRASSA2L.DFF  S11_ON_GRASSA3D.ANM  (+51 more)
src/prs-rs/tests/samples/mods/stage/stg02title_disp/: MISSIONA.ANM  STGTILE.TXD  STGTTL.ANM
tests/: compress_tests.rs  decompress_tests.rs  estimate_tests.rs
tests/samples/compressed/: Model.bin.prs  ObjectLayout.bin.prs  WorstCase.bin.prs
tests/samples/mods/stage/adv_challenge/: S_STG_SEL.ANM  TITLE.ANM
tests/samples/mods/stage/s11/: S11_K_07.BSP  S11_ONS_01.BSP  S11_ONS_04.BSP  S11_ONS_08.BSP  S11_PN_08.BSP  S11_PN_09.BSP  S11_PN_11.BSP
tests/samples/mods/stage/s11obj/: DOBJ0708_BARREL.DFF  OBJ0708_CAPSULE.DFF  S11_K_CLOUD2.DFF  S11_ONS_DAI_UP.DFF  S11_ON_DAI_DOWN.DFF  S11_ON_DOORL.DFF  S11_ON_FIREB_BASE.DFF  S11_ON_GRASSA1L.ANM  S11_ON_GRASSA1L.DFF  S11_ON_GRASSA2D.DFF  S11_ON_GRASSA5D.ANM  S11_ON_MASKB.DFF  S11_ON_SWITCH_BALL.DFF  S11_ON_SWITCH_OFF.DFF  S11_ON_TREE.DFF  S11_ON_WALLP_R.DFF  S11_ON_WALL_R1.DFF  S11_PNW_GRASSA1L.DFF  S11_PNW_GRASSA2L.DFF  S11_PNW_GRASSB2D.ANM  S11_PNW_GRASSB2L.DFF  S11_PNW_GRASSB3L.ANM  S11_PNW_GRASSB4L.DFF  S11_PNW_TREE.ANM  S11_PNW_TREE.DFF  S12_ON_GHOST_MANT.DFF  S12_O_GHOST_TOUJYOU.ANM  S12_O_GHOST_WARAI.ANM
tools/cli/: Cargo.toml
tools/cli/src/: macros.rs  main.rs  options.rs
tools/cli/src/commands/: decompress.rs
