[package]
name = "prs-rs"
version = "0.1.0"
edition = "2021"
description = "High performance compressor/decompressor for the SEGA PRS Compression scheme"
repository = "https://github.com/Sewer56/prs-rs"
license-file = "LICENSE"
include = ["src/**/*"]

[features]
default = ["std"]
c-exports = []
std = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
criterion = "0.5.1"
rstest = "0.18.2"
more-asserts = "0.3.1"

[target.'cfg(unix)'.dev-dependencies]
pprof = { version = "0.13", features = ["flamegraph", "criterion"] }

# Profile Build
[profile.profile]
inherits = "release"
debug = true
codegen-units = 1
lto = true
strip = false  # No stripping!!

# Optimized Release Build
[profile.release]
codegen-units = 1
lto = true
strip = true  # Automatically strip symbols from the binary.
panic = "abort"

# Benchmark Stuff
[[bench]]
name = "my_benchmark"
harness = false