[package]
name = "prs-rs"
version = "2.0.1"
edition = "2021"
description = "High performance compressor/decompressor for the SEGA PRS Compression scheme"
repository = "https://github.com/Sewer56/prs-rs"
license-file = "LICENSE"
readme = "README.MD"
include = ["src/**/*"]

[features]
default = ["std"]
c-exports = []
std = []
nightly = []

# See README.md for more information.
pgo = [ "c-exports" ]

[dependencies]
allocator-api2 = "0.3.1"

# C# Bindings
[build-dependencies]
csbindgen = "1.9.6"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
criterion = "0.5.1" # Don't update while pprof 0.15, because that brings in 0.5.0, incompatible with 0.6+
rstest = "0.26.1"
more-asserts = "0.3.1"
walkdir = "2.4.0"

[target.'cfg(all(any(target_os = "linux", target_os = "macos"), any(target_arch = "x86", target_arch = "x86_64", target_arch = "aarch64")))'.dev-dependencies]
pprof = { version = "0.15.0", features = ["flamegraph", "criterion"] }

# Profile Build
[profile.profile]
inherits = "release"
debug = true
codegen-units = 1
lto = true
strip = false  # No stripping!!

# Optimized Release Build
[profile.release]
codegen-units = 1
lto = true
strip = true  # Automatically strip symbols from the binary.
panic = "abort"

# Benchmark Stuff
[[bench]]
name = "my_benchmark"
path = "benches/my_benchmark/main.rs"
harness = false