[workspace]
resolver = "2"
members = ["prs-rs", "cli"]

# Profile Build
[profile.profile]
inherits = "release"
debug = true
strip = false           # symbols are needed for good profile data
split-debuginfo = "off"

# Benchmark Build
[profile.bench]
inherits = "profile"

# Optimized Release Build
[profile.release]
codegen-units = 1
lto = true
strip = true
panic = "abort"            # Automatically strip symbols from the binary
debug = "full"
split-debuginfo = "packed"
